<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/const1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/odabirGodina"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/odabirIstrazivanja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Spinner
        android:id="@+id/odabirIstrazivanja"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odabirGodina" />

    <Spinner
        android:id="@+id/odabirGrupa"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odabirIstrazivanja"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/dodajIstrazivanjeDugme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Upiši me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odabirGrupa"
        app:layout_constraintVertical_bias="0.72" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="Upis na istraživanje"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/godinaOdabir"
        android:layout_width="79dp"
        android:layout_height="27dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="22dp"
        android:text="GODINA:"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/odabirGodina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/istrazivanjaOdabir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="16dp"
        android:text="ISTRAŽIVANJE:"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/odabirIstrazivanja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odabirGodina"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/grupaOdabir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="16dp"
        android:text="GRUPA:"
        android:textAllCaps="true"
        android:textColor="#E91E63"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/odabirGrupa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/odabirIstrazivanja" />
</androidx.constraintlayout.widget.ConstraintLayout>